k8s-do/heritageflix-zuiderzeemuseum-locaties/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heritageflix-zuiderzeemuseum-locaties
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: heritageflix-zuiderzeemuseum-locaties
