k8s-do/heritageflix-zuiderzeemuseum-locaties/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heritageflix-zuiderzeemuseum-locaties
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - heritageflix-zuiderzeemuseum-locaties.demo.netwerkdigitaalerfgoed.nl
      secretName: heritageflix-zuiderzeemuseum-locaties-tls
  rules:
    - host: heritageflix-zuiderzeemuseum-locaties.demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heritageflix-zuiderzeemuseum-locaties
                port:
                  number: 80
